Horizontal Scroll Issue Fixed

--- a/portfolio-website/src/index.css
+++ b/portfolio-website/src/index.css
@@ -26,6 +26,6 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
-  width:100vw;
+  width:100%;
 
 }
